--- a/src/app/views/clientes/clientes.component.html
+++ b/src/app/views/clientes/clientes.component.html
@@ -1,3 +1,33 @@
+<c-toaster [placement]="position" class="p-3" position="fixed" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
+  <c-toast
+    (timer)="onTimerChange($event)"
+    (visibleChange)="onVisibleChange($event)"
+    [visible]="visible"
+    class="success-toast">
+    <c-toast-header class="success-toast-header">
+      <svg cIcon name="cilCheck" class="icon-success"></svg> <!-- Icono de éxito -->
+      <h4 class="success-heading">Creacion de Persona exitosa</h4>
+    </c-toast-header>
+    <c-toast-body class="success-toast-body">
+      <p class="success-toast-message">Persona creada con exito</p>
+    </c-toast-body>
+  </c-toast>
+</c-toaster>
+<c-toaster [placement]="position2" class="p-3" position="fixed" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
+  <c-toast
+    (timer)="onTimerChange2($event)"
+    (visibleChange)="onVisibleChange2($event)"
+    [visible]="visible2"
+    class="danger-toast">
+    <c-toast-header class="danger-toast-header">
+      <svg cIcon name="cilReportSlash" class="icon-danger"></svg> <!-- Icono de error -->
+      <h4 class="error-heading">   Error al crear persona</h4>
+    </c-toast-header>
+    <c-toast-body class="danger-toast-body">
+      <p class="danger-toast-message">Error al ingresar los datos</p>
+    </c-toast-body>
+  </c-toast>
+</c-toaster>
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">Cliente</h5>
