--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -1,3 +1,20 @@
+<c-toaster [placement]="position" class="p-3" position="fixed" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
+  <c-toast
+    (timer)="onTimerChange($event)"
+    (visibleChange)="onVisibleChange($event)"
+    [visible]="visible"
+    class="custom-toast">
+    <c-toast-header class="custom-toast-header">
+      Error de ingreso de datos
+    </c-toast-header>
+    <c-toast-body class="custom-toast-body">
+      <p class="custom-toast-message">Error al ingresar usuario o contraseña</p>
+      <c-progress thin class="custom-progress">
+        <c-progress-bar [value]="percentage" class="custom-progress-bar"></c-progress-bar>
+      </c-progress>
+    </c-toast-body>
+  </c-toast>
+</c-toaster>
 <div class="bg-light dark:bg-transparent min-vh-100 d-flex flex-row align-items-center">
   <c-container breakpoint="md">
     <c-row class="justify-content-center">
