--- a/src/app/views/prestamo/prestamo.component.scss
+++ b/src/app/views/prestamo/prestamo.component.scss
@@ -24,3 +24,98 @@
 .ng-touched.ng-invalid ~ .invalid-feedback {
   display: block;
 }
+
+
+
+.success-toast {
+  background-color: #f3f4f7; /* Verde suave */
+  border: 1px solid #86c686; /* Borde verde más oscuro */
+  border-radius: 0.25rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.success-toast-header {
+  display: flex; /* Para alinear elementos horizontalmente */
+  align-items: center;
+  background-color: 	#1b9e3e; /* Verde claro */
+  color: #f3f4f7; /* Texto gris oscuro */
+  font-weight: bold;
+  border-bottom: 1px solid #86c686;
+  padding: 0.75rem;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.success-toast-body {
+  padding: 1rem;
+}
+
+.success-toast-message {
+  margin: 0;
+  color: #212631; /* Texto gris oscuro */
+}
+
+.success-progress {
+  margin-top: 1rem;
+  height: 4px;
+  background-color: #3399ff; /* Fondo claro para la barra de progreso */
+}
+
+.success-progress-bar {
+  background-color: #86c686; /* Barra de progreso verde claro */
+}
+.icon-success{
+  transform: scale(1.5); /* Ajusta el valor según sea necesario */
+  margin-right: 10px; /* Ajusta el espacio entre el icono y el h4 según sea necesario */
+}
+.succ-heading {
+  margin: 0; /* Ajusta el margen del h4 para evitar espacios innecesarios */
+}
+
+
+.danger-toast {
+  background-color: #f3f4f7; /* Verde suave */
+  border: 1px solid #e55353; /* Borde verde más oscuro */
+  border-radius: 0.25rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.danger-toast-header {
+  display: flex; /* Para alinear elementos horizontalmente */
+  align-items: center;
+  background-color: 	#e55353; /* Verde claro */
+  color: #f3f4f7; /* Texto gris oscuro */
+  font-weight: bold;
+  border-bottom: 1px solid #e55353;
+  padding: 0.75rem;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.danger-toast-body {
+  padding: 1rem;
+}
+
+.danger-toast-message {
+  margin: 0;
+  color: #212631; /* Texto gris oscuro */
+}
+
+.danger-progress {
+  margin-top: 1rem;
+  height: 4px;
+  background-color: #e55353; /* Fondo claro para la barra de progreso */
+}
+
+.danger-progress-bar {
+  background-color: #e55353; /* Barra de progreso verde claro */
+}
+
+.icon-danger{
+  transform: scale(1.5); /* Ajusta el valor según sea necesario */
+  margin-right: 10px; /* Ajusta el espacio entre el icono y el h4 según sea necesario */
+}
+
+.error-heading {
+  margin: 0; /* Ajusta el margen del h4 para evitar espacios innecesarios */
+}
