método para listar posiciones

--- a/src/app/views/mapas/ubicaciones/ubicaciones.component.html
+++ b/src/app/views/mapas/ubicaciones/ubicaciones.component.html
@@ -15,3 +15,7 @@
   >
   </google-map>
 </div>
+<!-- Añadir el botón con *ngIf -->
+<button *ngIf="mostrar_dispositivos" class="boton-derecha" (click)="mostrarDispositivos()">
+  Mostrar Dispositivos
+</button>
